--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>APR Announcements Embed Processor</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="styles.css" /> -->
     <script src="main.js"></script>
   </head>
 
   <body>
-    <main>
-      <header>
+    <main class="fluid-container position-relative min-vh-100">
+      <header class="pt-5 px-5 text-center">
         <h1>APR Morning Announcements Embed Processor</h1>
+        <hr class="border border-primary border-2 opacity-50">
       </header>
 
-      <section>
+      <section class="fluid-container mt-4 mx-5">
         <p>Paste a YouTube video link here:</p>
         <form onsubmit="GenerateEmbed(); return false;">
           <input type="text" id="videoLink">
@@ -23,20 +25,32 @@
         <p>Please note that only YouTube links work!</p>
       </section>
 
-      <section id="partOne" style="display:none;">
-        <h2>Embed Test</h2>
-        <div id="embeddedVideo"></div>
-        <p>Please confirm that the embedded video above works before copying the code:</p>
-        <form onsubmit="DisplayCode(); return false;">
-          <input type="submit" value="Confirm">
-        </form>
-      </section>
-
-      <section id="partTwo" style="display:none;">
-        <h2>Generated Code</h2>
-        <div id="codeDisplay"></div>
-        <button onclick="CopyEmbed(); return false;">Copy</button>
-      </section>
+      <div>
+        <section class="fluid-container mt-2 mx-5" id="partOne" style="display:none;">
+          <h2>Embed Test</h2>
+          <div id="embeddedVideo"></div>
+          <p>Please confirm that the embedded video above works before copying the code:</p>
+          <form onsubmit="DisplayCode(); return false;">
+            <input type="submit" value="Confirm">
+          </form>
+        </section>
+        
+        <section class="fluid-container m-4 mx-5" id="partTwo" style="display:none;">
+          <h2>Generated Code</h2>
+          <article class="container ms-0 me-auto position-relative border p-3 rounded text-wrap clearfix" style="width:auto;max-width:1024px;">
+            <span class="d-inline" id="codeDisplay"></span>
+            <form class="d-inline float-end" onsubmit="CopyEmbed(); return false;">
+              <input type="submit" value="Copy">
+            </form>
+          </article>
+        </section>
+      </div>
     </main>
+
+    <footer class="fluid-container position-relative bottom-0 w-100 p-4 text-center">
+      <hr class="border border-primary border-1 opacity-25 w-75 mx-auto">
+      <p class="m-0 p-1">Built by Xander Dukes</p>
+      <a class="m-0 p-1" href="https://github.com/xander2005/APR-Embed-Processor" target="_blank">View source on GitHub</a>
+    </footer>
   </body>
 </html>
