--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>APR Announcements Embed Processor</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="styles.css" /> -->
     <script src="main.js"></script>
   </head>
 
@@ -35,7 +34,7 @@
           </form>
         </section>
         
-        <section class="fluid-container m-4 mx-5" id="partTwo" style="display:none;">
+        <section class="fluid-container my-4 mx-5" id="partTwo" style="display:none;">
           <h2>Generated Code</h2>
           <article class="container ms-0 me-auto position-relative border p-3 rounded text-wrap clearfix" style="width:auto;max-width:1024px;">
             <span class="d-inline" id="codeDisplay"></span>
