--- a/auto-updating-embed.html
+++ b/auto-updating-embed.html
@@ -15,6 +15,7 @@
       </header>
 
       <section class="fluid-container mt-4 mx-5">
+        <p>This video updates at 8:00 AM, Mon-Fri.</p>
         <div id="videoFrame"></div>
         <script>
           loadVideo("https://xander2005.github.io/APR-Embed-Processor/data/data.json");
