--- a/auto-updating-embed.html
+++ b/auto-updating-embed.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="description" content="An example for a video player that automatically updates according to the latest upload of a YouTube channel" />
+    <meta name="author" content="Xander Dukes" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>APR Announcements Embed Processor</title>
+    <title>Auto-Updating Video Embed Processor</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
 
@@ -19,10 +21,9 @@
         <div id="videoFrame"></div>
         <script>
           async function loadVideo(file) {
-            let videoInfoObj = await fetch(file);
-            let videoInfoText = await videoInfoObj.text();
-            
             try {
+              let videoInfoObj = await fetch(file);
+              let videoInfoText = await videoInfoObj.text();
               const videoInfo = JSON.parse(videoInfoText);
 
               const videoStyle = 'aspect-ratio:16/9;width:1024px;max-width:95%';
