--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="description" content="A processor that takes a YouTube video link and turns it into a snippet of embed code" />
+    <meta name="author" content="Xander Dukes" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>APR Announcements Embed Processor</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
