--- a/auto-updating-embed.html
+++ b/auto-updating-embed.html
@@ -60,7 +60,7 @@
             writeToIframe(document.getElementById('codeFrame'), codeText);
           }
 
-          loadText('https://xander2005.github.io/APR-Embed-Processor/data/auto-updating-embed-code.txt');
+          loadText('https://github.com/xander2005/APR-Embed-Processor/blob/eb75d418df55d1dcdce3b7a0ce86d7870e752833/data/data.json');
         </script>
       </section>
     </main>
